# miden-tutorials

./: .gitignore  .prettierrc  README.md  masm
.github/workflows/: build-docs.yml  ci.yml  doc-tests.yml  trigger-deploy-docs.yml
data/: miden-store.sqlite3-shm  miden-store.sqlite3-wal
docs/: Cargo.toml  docusaurus.config.ts  masm  styles.css
docs/compiler/: is_prime_rust.md
docs/src/: EXPORTED.md  index.md  lib.rs  miden_node_setup.md
masm/accounts/: count_reader.masm  counter.masm  counter_acl.masm  deposit_withdraw.masm  mapping_example_contract.masm  network_counter.masm  oracle_reader.masm  tic_tac_toe.masm
masm/notes/: cast_win_note.masm  create_game_note.masm  deposit_withdraw_note.masm  end_game_note.masm  hash_preimage_note.masm  iterative_output_note.masm  make_a_move_note.masm  make_win_move.masm  network_increment_note.masm
masm/scripts/: counter_script.masm  game_deployment_script.masm  make_a_move_script.masm
plans/: agglayer_bridge_in_migration_plan.md
rust-client/: .env  Cargo.toml
rust-client/tests/: tic_tac_toe_test.rs  tic_tac_toe_test_final_win.rs
scripts/: run_tutorials.sh
web-client/: package-lock.json  package.json  pnpm-lock.yaml
web-client/app/: layout.tsx  page.tsx  providers.tsx
web-client/lib/: constants.ts  createGame.ts  createLib.ts  createMintConsume.ts  customNoteDemo.ts  deployCounterContract.ts  endGame.ts  findGame.ts  foreignProcedureInvocation.ts  incrementCounterContract.ts  libraryTest.ts  makeMove.ts  multiSend.ts  multiSendWithDelegatedProver.ts  readBoard.ts  unauthenticatedNoteTransfer.ts  utils.ts  (+1 more)
(+24 files in other folders)
