[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { git = "https://github.com/0xMiden/miden-client", branch = "ajl-agglayer", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", branch = "ajl-agglayer", package = "miden-client-sqlite-store" }
miden-protocol = { git = "https://github.com/0xMiden/miden-base", branch = "ajl-claim-note-follow-up", features = ["std"] }
miden-standards = { git = "https://github.com/0xMiden/miden-base", branch = "ajl-claim-note-follow-up" }
miden-agglayer = { git = "https://github.com/0xMiden/miden-base", branch = "ajl-claim-note-follow-up", features = ["testing"] }
miden-tx = { git = "https://github.com/0xMiden/miden-base", branch = "ajl-claim-note-follow-up" }
miden-assembly = "0.18.3"
anyhow = "1.0"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
